--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.1.0",
     "@auth0/angular-jwt": "^5.0.2",
     "moment": "^2.29.4",
+    "ng2-currency-mask": "^13.0.3",
     "ngx-mask": "^14.2.3",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
